--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-823.8KB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 104.243.30.252, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇨🇳 中国-14.70MB/s(Youtube:不良林), server: jm.b.speedabc.xyz, port: 42011, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: jm.b.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.26MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42005, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-355.4KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-493.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-2.73MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42004, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇨🇳 中国-624.7KB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 32002, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-516.8KB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.96MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42003, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-372.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-167.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-278.6KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-287.3KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇨🇳 中国-201.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇰🇷 韩国-4.10MB/s(Youtube:不良林), server: ocikr.n.optage.moe, port: 44600, type: trojan, password: 7e1c3fe1-720d-43e3-86c6-bdbdbfcf0401, sni: ocikr.n.optage.moe, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-493.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-167.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-278.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.10MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-493.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-167.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-278.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.10MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-493.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-167.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-278.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.10MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-493.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-167.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-278.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.10MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-493.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-167.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-278.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.10MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-493.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-167.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-278.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.10MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-493.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-167.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-278.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.10MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
