--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42004, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-333.3KB/s(Youtube:不良林), server: jm.b.speedabc.xyz, port: 42002, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: jm.b.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42003, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.14MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 台湾-387.2KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇯🇵 日本-772.9KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-516.9KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-361.8KB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-378.6KB/s(Youtube:不良林), server: ah.b.speedabc.xyz, port: 42011, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: ah.b.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.09MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 32002, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-994.9KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.97MB/s(Youtube:不良林), server: ocikr.n.optage.moe, port: 44600, type: trojan, password: 7e1c3fe1-720d-43e3-86c6-bdbdbfcf0401, sni: ocikr.n.optage.moe, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1017.0KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-1.78MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.19MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-387.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-994.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1017.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-387.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-994.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1017.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-387.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-994.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1017.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-387.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.19MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-387.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-994.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1017.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-387.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-994.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1017.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-387.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-994.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1017.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-387.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-994.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1017.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
